# NeMo-Curator

./: README.md  api-design.md  pyproject.toml
ray-curator/: CONTRIBUTING.md  Dockerfile  pyproject.toml
ray-curator/notebooks/: domain_classifier.ipynb  quality_classifier.ipynb
ray-curator/ray_curator/: __init__.py
ray-curator/ray_curator/backends/: base.py
ray-curator/ray_curator/backends/experimental/: utils.py
ray-curator/ray_curator/backends/experimental/ray_actor/: __init__.py  adapter.py  executor.py  object_coordinator.py
ray-curator/ray_curator/backends/experimental/ray_actor_pool/: __init__.py  adapter.py  executor.py  raft_adapter.py  shuffle_adapter.py  utils.py
ray-curator/ray_curator/backends/experimental/ray_data/: adapter.py  executor.py  setup_utils.py  utils.py
ray-curator/ray_curator/backends/internal/raft/: actor.py  ray_comms.py
ray-curator/ray_curator/backends/xenna/: executor.py
ray-curator/ray_curator/core/: client.py  constants.py  utils.py
ray-curator/ray_curator/examples/: kmeans_example.py  quickstart.py
ray-curator/ray_curator/examples/image/: image_curation_example.py
ray-curator/ray_curator/examples/video/: video_read_example.py  video_split_clip_example.py
ray-curator/ray_curator/models/: __init__.py  aesthetics.py  base.py  clip.py  cosmos_embed1.py  internvideo2_mm.py  prompt_formatter.py  qwen_lm.py  qwen_vl.py  transnetv2.py
ray-curator/ray_curator/stages/: base.py  client_partitioning.py  file_partitioning.py
ray-curator/ray_curator/stages/classifiers/: __init__.py  aegis.py  base.py  content_type.py  crossfit_wrappers.py  domain.py  hf_model.py  hf_tokenizer.py  quality.py
ray-curator/ray_curator/stages/deduplication/: __init__.py  id_generator.py  io_utils.py  removal.py
ray-curator/ray_curator/stages/deduplication/fuzzy/: buckets_to_edges.py  connected_components.py  minhash.py
ray-curator/ray_curator/stages/deduplication/semantic/: __init__.py  base.py  file_task.py  identify_duplicates.py  io.py  kmeans.py  kmeans_io.py  pairwise.py  pairwise_do_not_commit.py  pairwise_io.py  ranking.py  remove_duplicates.py  utils.py  workflow.py
ray-curator/ray_curator/stages/download/text/: __init__.py
ray-curator/ray_curator/stages/eval_decontamination/text/: __init__.py  evalset_base.py  evalset_builder.py  evalsets.py  stage.py  text_utils.py
ray-curator/ray_curator/stages/image/embedders/: clip_embedder.py
ray-curator/ray_curator/stages/image/io/: image_reader.py  image_writer.py
ray-curator/ray_curator/stages/io/reader/: file_partitioning.py  jsonl.py
ray-curator/ray_curator/stages/io/writer/: dataframe.py
ray-curator/ray_curator/stages/modules/: __init__.py  add_id.py  score_filter.py
ray-curator/ray_curator/stages/shuffler/: rapidsmpf_shuffler.py
ray-curator/ray_curator/stages/text/classifiers/: aegis.py  base.py  content_type.py  domain.py  fineweb_edu.py  prompt_task_complexity.py  quality.py
ray-curator/ray_curator/stages/text/deduplication/: removal.py  removal_workflow.py  semantic.py
ray-curator/ray_curator/stages/text/embedders/: __init__.py  base.py  utils.py
ray-curator/ray_curator/stages/text/filters/: fasttext_filter.py  (+1 more)
ray-curator/ray_curator/tasks/: __init__.py  tasks.py  video.py
ray-curator/ray_curator/utils/: client_utils.py  decoder_utils.py  file_utils.py  nvcodec_utils.py  operation_utils.py  performance_utils.py  storage_utils.py  windowing_utils.py  writer_utils.py
ray-curator/ray_curator/utils/misc/: retry_utils.py
ray-curator/tests/: conftest.py
ray-curator/tests/backends/: conftest.py  test_integration.py  utils.py
ray-curator/tests/backends/experimental/: test_utils.py
ray-curator/tests/models/: test_aesthetics.py  test_clip.py  test_cosmos_embed1.py  test_internvideo2.py  test_internvideo2_mm.py  test_prompt_formatter.py  test_qwen_lm.py  test_qwen_vl.py  test_transnetv2.py
ray-curator/tests/stages/: test_add_id.py  test_base.py  test_client_partitioning.py  test_file_partitioning.py  test_filters.py
ray-curator/tests/stages/deduplication/: conftest.py  test_id_generator.py  test_removal.py
ray-curator/tests/stages/text/: test_filters.py  test_modifiers.py
ray-curator/tests/stages/video/: __init__.py
ray-curator/tests/tasks/: test_video.py
ray-curator/tests/utils/: test_decoder_utils.py  test_file_utils.py  test_operation_utils.py
(+323 files in other folders)
